// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create a AddressEdit 1`] = `
<div class="ms-address-edit">
  <div placeholder="收货人姓名" class="ms-cell ms-field">
    <!---->
    <div class="ms-cell__title"><span>姓名</span>
      <!---->
    </div>
    <div class="ms-cell__value">
      <div class="ms-field__body"><input type="text" placeholder="收货人姓名" value="" class="ms-field__control">
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <div placeholder="收货人手机号" class="ms-cell ms-field">
    <!---->
    <div class="ms-cell__title"><span>电话</span>
      <!---->
    </div>
    <div class="ms-cell__value">
      <div class="ms-field__body"><input type="tel" placeholder="收货人手机号" value="" class="ms-field__control">
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <div placeholder="选择省 / 市 / 区" class="ms-cell ms-field">
    <!---->
    <div class="ms-cell__title"><span>地区</span>
      <!---->
    </div>
    <div class="ms-cell__value">
      <div class="ms-field__body"><input type="text" readonly="readonly" placeholder="选择省 / 市 / 区" value="" class="ms-field__control">
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <div class="ms-cell ms-address-edit-detail">
    <!---->
    <!---->
    <div class="ms-cell__value ms-cell__value--alone">
      <div rows="1" maxlength="200" placeholder="街道门牌、楼层房间号等信息" class="ms-cell ms-field">
        <!---->
        <div class="ms-cell__title"><span>详细地址</span>
          <!---->
        </div>
        <div class="ms-cell__value">
          <div class="ms-field__body"><textarea rows="1" maxlength="200" placeholder="街道门牌、楼层房间号等信息" class="ms-field__control"></textarea>
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <!---->
  <!---->
  <div class="ms-address-edit__buttons"><button class="ms-button ms-button--danger ms-button--normal ms-button--block"><span class="ms-button__text">
      保存
    </span></button>
    <!---->
  </div>
  <div name="popup-slide-bottom" class="ms-popup ms-popup--bottom" style="display:none;">
    <div class="ms-picker ms-area">
      <div class="ms-hairline--top-bottom ms-picker__toolbar">
        <div class="ms-picker__cancel">
          取消
        </div>
        <!---->
        <div class="ms-picker__confirm">
          确认
        </div>
      </div>
      <div class="ms-picker__loading">
        <div class="ms-loading ms-loading--circular ms-loading" style="color:#c9c9c9;width:undefined;height:undefined;"><span class="ms-loading__spinner ms-loading__spinner--circular"> <svg viewBox="25 25 50 50" class="ms-loading__circular"><circle cx="50" cy="50" r="20" fill="none"></circle></svg></span></div>
      </div>
      <div class="ms-picker__columns" style="height:220px;">
        <div class="ms-picker-column" style="height:220px;">
          <ul style="transition:0ms;transform:translate3d(0, 88px, 0);line-height:44px;"></ul>
        </div>
        <div class="ms-picker-column" style="height:220px;">
          <ul style="transition:0ms;transform:translate3d(0, 88px, 0);line-height:44px;"></ul>
        </div>
        <div class="ms-picker-column" style="height:220px;">
          <ul style="transition:0ms;transform:translate3d(0, 88px, 0);line-height:44px;"></ul>
        </div>
        <div class="ms-hairline--top-bottom ms-picker__frame" style="height:44px;"></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`create a AddressEdit with props 1`] = `
<div class="ms-address-edit">
  <div placeholder="收货人姓名" class="ms-cell ms-field">
    <!---->
    <div class="ms-cell__title"><span>姓名</span>
      <!---->
    </div>
    <div class="ms-cell__value">
      <div class="ms-field__body"><input type="text" placeholder="收货人姓名" value="测试" class="ms-field__control">
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <div placeholder="收货人手机号" class="ms-cell ms-field">
    <!---->
    <div class="ms-cell__title"><span>电话</span>
      <!---->
    </div>
    <div class="ms-cell__value">
      <div class="ms-field__body"><input type="tel" placeholder="收货人手机号" value="13000000000" class="ms-field__control">
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <div placeholder="选择省 / 市 / 区" class="ms-cell ms-field">
    <!---->
    <div class="ms-cell__title"><span>地区</span>
      <!---->
    </div>
    <div class="ms-cell__value">
      <div class="ms-field__body"><input type="text" readonly="readonly" placeholder="选择省 / 市 / 区" value="北京市/朝阳区" class="ms-field__control">
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <div class="ms-cell ms-address-edit-detail">
    <!---->
    <!---->
    <div class="ms-cell__value ms-cell__value--alone">
      <div rows="1" maxlength="200" placeholder="街道门牌、楼层房间号等信息" class="ms-cell ms-field">
        <!---->
        <div class="ms-cell__title"><span>详细地址</span>
          <!---->
        </div>
        <div class="ms-cell__value">
          <div class="ms-field__body"><textarea rows="1" maxlength="200" placeholder="街道门牌、楼层房间号等信息" class="ms-field__control">详细地址</textarea>
            <!---->
            <!---->
            <!---->
          </div>
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div maxlength="6" placeholder="邮政编码" class="ms-cell ms-field">
    <!---->
    <div class="ms-cell__title"><span>邮政编码</span>
      <!---->
    </div>
    <div class="ms-cell__value">
      <div class="ms-field__body"><input type="tel" maxlength="6" placeholder="邮政编码" value="10000" class="ms-field__control">
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <div class="ms-cell ms-cell--center ms-cell--borderless ms-switch-cell">
    <!---->
    <div class="ms-cell__title"><span>设为默认收货地址</span>
      <!---->
    </div>
    <div class="ms-cell__value">
      <div title="设为默认收货地址" class="ms-switch ms-switch--on" style="font-size:24px;background-color:undefined;">
        <div class="ms-switch__node">
          <!---->
        </div>
      </div>
    </div>
    <!---->
  </div>
  <div class="ms-address-edit__buttons"><button class="ms-button ms-button--danger ms-button--normal ms-button--block"><span class="ms-button__text">
      保存
    </span></button>
    <!---->
  </div>
  <div name="popup-slide-bottom" class="ms-popup ms-popup--bottom" style="display:none;">
    <div class="ms-picker ms-area">
      <div class="ms-hairline--top-bottom ms-picker__toolbar">
        <div class="ms-picker__cancel">
          取消
        </div>
        <!---->
        <div class="ms-picker__confirm">
          确认
        </div>
      </div>
      <!---->
      <div class="ms-picker__columns" style="height:220px;">
        <div class="ms-picker-column" style="height:220px;">
          <ul style="transition:0ms;transform:translate3d(0, 88px, 0);line-height:44px;"></ul>
        </div>
        <div class="ms-picker-column" style="height:220px;">
          <ul style="transition:0ms;transform:translate3d(0, 88px, 0);line-height:44px;"></ul>
        </div>
        <div class="ms-picker-column" style="height:220px;">
          <ul style="transition:0ms;transform:translate3d(0, 88px, 0);line-height:44px;"></ul>
        </div>
        <div class="ms-hairline--top-bottom ms-picker__frame" style="height:44px;"></div>
      </div>
    </div>
  </div>
</div>
`;
